<resources>
    <string name="app_name">Mind Step</string>
    <string name="Usuario">Usuario</string>
    <string name="hint_correo">Ingrese su correo o nombre de usuario</string>
    <string name="hint_contraseña">Ingrese su contraseña</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="Expediente">N° Expediente: </string>
    <string name="Expediente_hint">Ingrese el expediente</string>
    <string name="cedula">N° Cédula: </string>
    <string name="cedula_hint">Ingrese la cedula</string>
    <string name="nombres">Nombres: </string>
    <string name="nombres_hint">Ingrese los nombres</string>
    <string name="Apellidos">Apellidos: </string>
    <string name="Apellidos_hint">ingrese los apellidos</string>
    <string name="FechaNac">Fecha de Nacimiento: </string>
    <string name="correo">Correo: </string>
    <string name="correo_hint">ingrese el correo</string>
    <string name="contraseña_">Contraseña: </string>
    <string name="contrasña_hint">ingrese la contraseña</string>
    <string name="tipo_de_cuenta">Tipo de cuenta: </string>
    <string name="username">Nombre de Usuario: </string>
    <string name="usename_hint">ingrese el nombre de usuario</string>
    <string name="registrar">Registrar</string>
    <string name="fecha_hint">ingrese la fecha yyyy-MM-dd</string>
    <string name="buscar_usuario">Buscar</string>
    <string name="eliminar_usuario">Eliminar</string>
    <string name="modificar">Modificar</string>
    <string name="buscar_usuario_administrar">Buscar Usuario</string>
    <string name="asignar_cita">Asignar Cita</string>
    <string name="fechas">Fecha</string>
    <string name="buscar_user">Buscar</string>
    <string name="cambiar_contrasenia">Cambiar Contraseña</string>
    <string name="ayuda">Ayuda</string>
    <string name="cambiar_nombre">Cambiar nombre</string>
    <string name="proxima_cita">Próxima cita:</string>
    <string name="Fecha">Fecha:</string>
    <string name="Hora">Hora:</string>
    <string name="CerrarSesion">Cerrar Sesión</string>
    <string name="resultados">Resultados</string>
    <string name="nombreTest">Nombre del Test:</string>
    <string name="descripcion">Descripcion:</string>
    <string name="nombreTestHint">Ingrese el nombre del test</string>
    <string name="descripcionHint">Ingrese la descripcion del test</string>
    <string name="guardar">Guardar</string>
    <string name="Leve">Leve</string>
    <string name="Moderado">Moderado</string>
    <string name="Bastante">Bastante</string>
    <string name="No">No</string>
    <string name="siguiente">Siguiente</string>
</resources>