<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Login.Login">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="48dp"
        android:background="@drawable/fondo_text_view"
        android:fontFamily="@font/identidad_extra_bold"
        android:gravity="center"
        android:text="@string/contraseña"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETEmailAddress"
        tools:ignore="MissingConstraints,RtlCompat" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="200dp"
        android:background="@drawable/fondo_text_view"
        android:fontFamily="@font/identidad_extra_bold"
        android:gravity="center"
        android:text="@string/Usuario"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,RtlCompat" />

    <EditText
        android:id="@+id/ETEmailAddress"
        android:layout_width="345dp"
        android:layout_height="70dp"
        android:layout_marginTop="36dp"
        android:autofillHints="autofill:username, autofill:email"
        android:background="@drawable/fondo_text_view"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_correo"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/ETPassword"
        android:layout_width="345dp"
        android:layout_height="70dp"
        android:layout_marginTop="36dp"
        android:autofillHints="autofill:password"
        android:background="@drawable/fondo_text_view"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_contraseña"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/iniciar_sesion"
        android:layout_width="228dp"
        android:layout_height="65dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="198dp"
        android:background="@drawable/fondo_botones"
        android:fontFamily="@font/identidad_extra_bold"
        android:gravity="center"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETPassword" />

    <ImageView
        android:id="@+id/Ojo"
        android:layout_width="34dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/ETPassword"
        app:layout_constraintEnd_toEndOf="@+id/ETPassword"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="@+id/ETPassword"
        app:layout_constraintTop_toTopOf="@+id/ETPassword"
        app:layout_constraintVertical_bias="0.483"
        app:srcCompat="@drawable/foto"
        android:importantForAccessibility="no" />

</androidx.constraintlayout.widget.ConstraintLayout>