<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Paciente.Agenda">

    <View
        android:id="@+id/toppanel"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:background="@color/MenuColor"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        />
    <View
        android:id="@+id/topsombra"
        android:layout_width="wrap_content"
        android:layout_height="1.2dp"
        android:layout_gravity="center_horizontal"
        android:background="#494E4C"
        android:elevation="50dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toppanel"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/bottompanel"
        android:layout_width="wrap_content"
        android:layout_height="89dp"
        android:background="@color/MenuColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/bottomsombra"
        android:layout_width="wrap_content"
        android:layout_height="1.2dp"
        android:layout_above="@id/bottompanel"
        android:background="#494E4C"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/bottompanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="center_horizontal"
        android:elevation="50dp"
        android:outlineAmbientShadowColor="@color/BackgroundColor"
        android:outlineSpotShadowColor="@color/black"
        tools:ignore="MissingConstraints"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/textLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/identidad_extra_bold"
        android:text="@string/app_name"
        android:textColor="@color/verde"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/toppanel"
        app:layout_constraintEnd_toEndOf="@+id/toppanel"
        app:layout_constraintStart_toStartOf="@+id/toppanel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="79dp"
        android:layout_height="67dp"
        android:layout_marginStart="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/toppanel"
        app:layout_constraintStart_toStartOf="@+id/toppanel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538"
        app:srcCompat="@drawable/logo_icono"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/perfil"
        android:layout_width="168dp"
        android:layout_height="164dp"
        android:layout_marginTop="60dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topsombra"
        app:srcCompat="@drawable/usuario" />


    <Button
        android:id="@+id/btnCambiarNombre"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/fondo_verde_claro"
        android:text="@string/cambiar_nombre"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/perfil" />


    <Button
        android:id="@+id/btnCambiarContraseña"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/fondo_verde_claro"
        android:text="@string/cambiar_contrasenia"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCambiarNombre" />


    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/fondo_verde_claro"
        android:text="@string/ayuda"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottomsombra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>