<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".TestCreator.AdministrarTest">

    <View
        android:id="@+id/toppanel"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:background="@color/MenuColor"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        />

    <View
        android:id="@+id/topsombra"
        android:layout_width="wrap_content"
        android:layout_height="1.2dp"
        android:layout_gravity="center_horizontal"
        android:background="#494E4C"
        android:elevation="50dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toppanel"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/bottompanel"
        android:layout_width="wrap_content"
        android:layout_height="89dp"
        android:background="@color/MenuColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/bottomsombra"
        android:layout_width="wrap_content"
        android:layout_height="1.2dp"
        android:layout_above="@id/bottompanel"
        android:layout_gravity="center_horizontal"
        android:background="#494E4C"
        android:elevation="50dp"
        android:outlineAmbientShadowColor="@color/BackgroundColor"
        android:outlineSpotShadowColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/bottompanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:targetApi="p" />

    <ImageView
        android:id="@+id/perfil"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="@+id/toppanel"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/usuario" />

    <Spinner
        android:id="@+id/perfil_clickable"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_above="@id/perfil"
        app:layout_constraintEnd_toEndOf="@+id/toppanel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/identidad_extra_bold"
        android:text="@string/app_name"
        android:textColor="@color/verde"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/toppanel"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/toppanel"
        app:layout_constraintStart_toStartOf="@+id/toppanel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538"
        app:srcCompat="@drawable/logo_icono"
        tools:ignore="ContentDescription" />

    <View
        android:id="@+id/view7"
        android:layout_width="1.5dp"
        android:layout_height="89dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view9"
        app:layout_constraintStart_toStartOf="@+id/bottompanel"
        app:layout_constraintTop_toTopOf="@+id/bottompanel" />

    <View
        android:id="@+id/view9"
        android:layout_width="1.5dp"
        android:layout_height="89dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bottompanel"
        app:layout_constraintHorizontal_bias="0.665"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottompanel"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/ajuste_imagen"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bottompanel"
        app:layout_constraintStart_toEndOf="@+id/view9"
        app:layout_constraintTop_toTopOf="@+id/view6"
        app:srcCompat="@drawable/ajuste" />

    <ImageView
        android:id="@+id/crearTest"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:srcCompat="@drawable/test" />

    <ImageView
        android:id="@+id/administracionTest"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view9"
        app:layout_constraintStart_toEndOf="@+id/view7"
        app:layout_constraintTop_toTopOf="@+id/bottompanel"
        app:srcCompat="@drawable/administrador" />

    <View
        android:id="@+id/view5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view9"
        app:layout_constraintStart_toEndOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/bottomsombra" />

    <View
        android:id="@+id/view6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bottompanel"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toEndOf="@+id/view9"
        app:layout_constraintTop_toBottomOf="@+id/bottomsombra"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view"
        android:layout_width="110dp"
        android:layout_height="75dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view7"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomsombra"
        app:layout_constraintVertical_bias="0.0" />

    <!--Contenido dentro de la pantalla principal-->

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/bottomsombra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topsombra">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="160dp"
                android:layout_height="48dp"
                android:textColor="@color/black"
                android:background="@drawable/fondo_verde_claro"
                android:textSize="18sp"
                android:text="@string/nombreTest"
                android:gravity="center"
                android:layout_marginStart="125dp"
                android:layout_marginTop="50dp"
                />

            <EditText
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:background="@drawable/fondo_verde_claro"
                android:layout_marginStart="50dp"
                android:layout_marginTop="40dp"
                android:inputType="text"
                android:importantForAutofill="no"
                tools:ignore="LabelFor"
                android:hint="@string/nombreTestHint"
                android:gravity="center"
                />

            <TextView
                android:layout_width="160dp"
                android:layout_height="48dp"
                android:textColor="@color/black"
                android:background="@drawable/fondo_verde_claro"
                android:textSize="18sp"
                android:text="@string/descripcion"
                android:gravity="center"
                android:layout_marginStart="125dp"
                android:layout_marginTop="40dp"
                />

            <EditText
                android:layout_width="300dp"
                android:minHeight="48dp"
                android:layout_height="wrap_content"
                android:background="@drawable/fondo_verde_claro"
                android:layout_marginStart="50dp"
                android:layout_marginTop="40dp"
                android:inputType="text"
                android:importantForAutofill="no"
                tools:ignore="LabelFor"
                android:gravity="center"
                android:hint="@string/descripcionHint"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/containerLayout"
                android:orientation="vertical"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                >
            </LinearLayout>
            <Button
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:background="@drawable/fondo_botones"
                android:textColor="@color/black"
                android:layout_marginTop="40dp"
                android:layout_marginStart="130dp"
                android:layout_marginBottom="50dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/guardar"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>